--- a/project.config.json
+++ b/project.config.json
@@ -8,10 +8,11 @@
 		"es6": true,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"autoAudits": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.3.0",
+	"libVersion": "2.5.2",
 	"appid": "wx7ae86a27959c0d1b",
 	"projectname": "91workuser",
 	"debugOptions": {
