--- a/project.config.json
+++ b/project.config.json
@@ -37,19 +37,28 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": 0,
 					"name": "user",
-					"pathName": "pages/order/order",
-					"query": ""
+					"pathName": "pages/jobinfo/index",
+					"query": "id=2",
+					"scene": null
 				},
 				{
 					"id": 1,
 					"name": "user",
-					"pathName": "pages/editUser/editUser",
-					"query": ""
+					"pathName": "pages/user/user",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 2,
+					"name": "job",
+					"pathName": "pages/jobinfo/index",
+					"query": "id=2",
+					"scene": null
 				}
 			]
 		}
